Minor changes in notebooks and files, better cleaning of data, modeling notebook started

--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "c0d1fc97",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4   NaN          NaN  NaN       NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "fa4a75a3",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "4        False  773570               NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "id": "329c60cc",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "30961  NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "d28803db",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "30961     NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "bbf58495",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "60d7ba5a",
    "metadata": {},
    "outputs": [],
@@ -790,11 +790,11 @@
     "df_games.fillna(\n",
     "    {\n",
     "        'developer': 'Unknown',\n",
-    "        'genres': 'No genre',\n",
-    "        'app_name': 'empty',\n",
-    "        'release_date': 'unknown',\n",
-    "        'tags': 'empty',\n",
-    "        'specs': 'No specifications',\n",
+    "        'genres': 'Empty',\n",
+    "        'app_name': 'Unknown',\n",
+    "        'release_date': 'Unknown',\n",
+    "        'tags': 'Empty',\n",
+    "        'specs': 'Empty',\n",
     "        'price': 0\n",
     "    },\n",
     "    inplace=True\n",
@@ -813,18 +813,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "id": "a957f0f4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funciton to extract only the year of dates\n",
+    "def get_year(y:str):\n",
+    "    # There are different formats along the column\n",
+    "    # And also strings from filling Na values before\n",
+    "    # Using exception handling to avoid errors and return years\n",
+    "    try:\n",
+    "        date = pd.to_datetime(y, format='mixed')\n",
+    "        return date.year\n",
+    "    except:\n",
+    "        return 'Unknown'\n",
+    "    \n",
+    "\n",
     "# Getting only the year\n",
-    "df_games['release_date'] = df_games['release_date'].apply(lambda x: x[:4] if x != 'unknown' else x)"
+    "df_games['release_date'] = df_games['release_date'].apply(get_year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "id": "932eaa8c",
    "metadata": {},
    "outputs": [
