Changes in ETL, 4th game for EDA and Preprocessing baseline. New functions added to functions.py

--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "d5f11421",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "c0d1fc97",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4   NaN          NaN  NaN       NaN  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "fa4a75a3",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "4        False  773570               NaN  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "329c60cc",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "30961  NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "d28803db",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "30961     NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "bbf58495",
    "metadata": {},
    "outputs": [
@@ -780,40 +780,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "60d7ba5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Null handling\n",
-    "df_games.fillna(\n",
-    "    {\n",
-    "        'developer': 'Unknown',\n",
-    "        'genres': 'Empty',\n",
-    "        'app_name': 'Unknown',\n",
-    "        'release_date': 'Unknown',\n",
-    "        'tags': 'Empty',\n",
-    "        'specs': 'Empty',\n",
-    "        'price': 0\n",
-    "    },\n",
-    "    inplace=True\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bdd60703",
    "metadata": {},
    "source": [
     "**32313 records left**\n",
     "\n",
-    "So the idea is to keep it simple, i will discard columns i won't need for the analysis and keep the most informative ones. That is, those that allow me to create relationships (games-reviews, user-items, for example)."
+    "So the idea is to keep it simple, i will discard columns i won't need for the analysis and keep the most informative ones. That is, those that allow me to create relationships (games-reviews, user-items, for example).\n",
+    "\n",
+    "Fisrt handling missing values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "id": "a957f0f4",
    "metadata": {},
    "outputs": [],
@@ -825,18 +805,56 @@
     "    # Using exception handling to avoid errors and return years\n",
     "    try:\n",
     "        date = pd.to_datetime(y, format='mixed')\n",
-    "        return date.year\n",
+    "        year = date.year\n",
+    "        return year\n",
     "    except:\n",
-    "        return 'Unknown'\n",
+    "        return np.nan\n",
     "    \n",
     "\n",
     "# Getting only the year\n",
-    "df_games['release_date'] = df_games['release_date'].apply(get_year)"
+    "df_games['release_date'] = df_games['release_date'].apply(get_year)\n",
+    "# Filling values with the median\n",
+    "median_year = df_games['release_date'].median()\n",
+    "df_games['release_date'].fillna(median_year, inplace=True)\n",
+    "# Converting to int\n",
+    "df_games['release_date'] = df_games['release_date'].map(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "965578f5",
+   "metadata": {},
+   "source": [
+    "The other numerical variable to study is the price. For now, null values will be replaced by 0.\n",
+    "\n",
+    "Genres, tags, specifications are lists, so null values will be replaced by 'empty'\n",
+    "\n",
+    "Null values for names and developers will be replaced by 'Unknown'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
+   "id": "9eebaf43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_games.fillna(\n",
+    "    {\n",
+    "        'price': 0,\n",
+    "        'genres': 'Empty',\n",
+    "        'tags': 'Empty',\n",
+    "        'specs': 'Empty',\n",
+    "        'developer': 'Unknown',\n",
+    "        'app_name': 'Unknown'\n",
+    "    },\n",
+    "    inplace=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "932eaa8c",
    "metadata": {},
    "outputs": [
