--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "d5f11421",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "c0d1fc97",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4   NaN          NaN  NaN       NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "fa4a75a3",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "4        False  773570               NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "329c60cc",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "30961  NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "d28803db",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "30961     NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "bbf58495",
    "metadata": {},
    "outputs": [
@@ -788,12 +788,15 @@
     "\n",
     "So the idea is to keep it simple, i will discard columns i won't need for the analysis and keep the most informative ones. That is, those that allow me to create relationships (games-reviews, user-items, for example).\n",
     "\n",
-    "Fisrt handling missing values"
+    "Fisrt handling missing values\n",
+    "\n",
+    "- Only the year of release will be taken.\n",
+    "- Null values will be replaced for the median value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "a957f0f4",
    "metadata": {},
    "outputs": [],
@@ -822,10 +825,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a0a5e2ba",
+   "metadata": {},
+   "source": [
+    "- Is there prices = 0?\n",
+    "- What is the range?\n",
+    "\n",
+    "For now, the column 'price' being object type makes difficult the analysis. Simple descriptive statistics cannot be calculated at this point.\n",
+    "\n",
+    "That been said, check if there is price = 0. By it's nature, the 'price' column should be treated as floating numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "320b0e54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items with price 0 USD: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "zero = df_games[df_games['price'] == 0]\n",
+    "\n",
+    "print('Items with price 0 USD:', len(zero))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "965578f5",
    "metadata": {},
    "source": [
-    "The other numerical variable to study is the price. For now, null values will be replaced by 0.\n",
+    "**No prices equal to zero**, **there are labels for 'free'** which mean zero though. Given that np.NaN are float typed, it will stay like that and **it will be easier to handle and properly replaced** in a further analysis.\n",
     "\n",
     "Genres, tags, specifications are lists, so null values will be replaced by 'empty'\n",
     "\n",
@@ -834,14 +870,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "9eebaf43",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_games.fillna(\n",
     "    {\n",
-    "        'price': 0,\n",
     "        'genres': 'Empty',\n",
     "        'tags': 'Empty',\n",
     "        'specs': 'Empty',\n",
@@ -854,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "932eaa8c",
    "metadata": {},
    "outputs": [
@@ -869,12 +904,14 @@
    "source": [
     "# Renaming id and release date columns\n",
     "df_games.rename(columns={'id':'item_id', 'release_date':'release_year'}, inplace=True)\n",
+    "\n",
     "# Keeping ids, genres, specs, prices, developer, app_names, tags\n",
-    "# Creating a gzip crompessed json file\n",
-    "columns = ['item_id', 'developer', 'app_name', 'genres','tags', 'specs','release_year', 'price']\n",
-    "fts.gzip_json_file('./data/games.json.gz',\n",
-    "               df=df_games,\n",
-    "               subset=columns)"
+    "columns = ['item_id', 'developer', 'app_name', 'genres', 'tags', 'specs', 'release_year', 'price']\n",
+    "fts.gzip_json_file(\n",
+    "    './data/games.json.gz',\n",
+    "    df=df_games,\n",
+    "    subset=columns  \n",
+    ")"
    ]
   },
   {
@@ -891,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "15efae19",
    "metadata": {},
    "outputs": [
@@ -910,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "c206c43e",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1045,7 @@
        "4  [{'funny': '3 people found this review funny',...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "5e85d5f8",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1077,7 @@
        "25485"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "386983ac",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1099,7 @@
        "309"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "4aa1ae8f",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "2738f70c",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "7a73839e",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "47796120",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "0a4aa903",
    "metadata": {},
    "outputs": [
@@ -1225,6 +1262,7 @@
     }
    ],
    "source": [
+    "# Unpacking and returning a DataFrame again\n",
     "revs = fts.json_unpacking(df_revs, where='reviews',\n",
     "                             values=['posted', 'item_id', 'recommend', 'review'],\n",
     "                             old_colums=['user_id'])\n",
@@ -1236,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "554cc5dc",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "525ffb0c",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1319,7 @@
     "# Saving it into a file - 58430 reviews total\n",
     "columns = ['user_id', 'item_id', 'recommend', 'review']\n",
     "fts.gzip_json_file('./data/user_reviews_c.json.gz',\n",
-    "               df=df_revs,\n",
+    "               df=revs,\n",
     "               subset=columns)"
    ]
   },
@@ -1301,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f0e8420e",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "b01dd2c2",
    "metadata": {},
    "outputs": [
@@ -1440,7 +1478,7 @@
        "4  [{'item_id': '300', 'item_name': 'Day of Defea...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "511de40d",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "ad128124",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "f0d65df5",
    "metadata": {},
    "outputs": [
@@ -1571,12 +1609,12 @@
    "source": [
     "2841 Users having 0 items and some review. They represent about **3%** of the total.\n",
     "\n",
-    "Dropping all users with 0 items for simplicity."
+    "Dropping all users with 0 items for simplicity. **Not caring for the resulting indexes** for now as items will be unpacked."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "2fe1f906",
    "metadata": {},
    "outputs": [
@@ -1603,14 +1641,14 @@
     "# Getting indexes to drop\n",
     "idxs =df_items[df_items['items_count'] == 0].index\n",
     "\n",
-    "df_items.drop(index=idxs, inplace=True)\n",
+    "df_items.drop(index=idxs, inplace=True,)\n",
     "# Final version of the data\n",
     "df_items.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "0b18c7ed",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1661,7 @@
        " 'playtime_2weeks': 0}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1655,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "4a5abf4e",
    "metadata": {},
    "outputs": [
@@ -1687,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "75021417",
    "metadata": {},
    "outputs": [
@@ -1722,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "347ee119",
    "metadata": {},
    "outputs": [
@@ -1841,7 +1879,7 @@
        "[1847730 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "fac8b086",
    "metadata": {},
    "outputs": [
@@ -1871,7 +1909,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 3246352 entries, 0 to 5094081\n",
+      "RangeIndex: 3246352 entries, 0 to 3246351\n",
       "Data columns (total 3 columns):\n",
       " #   Column            Dtype \n",
       "---  ------            ----- \n",
@@ -1879,7 +1917,7 @@
       " 1   item_id           object\n",
       " 2   playtime_forever  int64 \n",
       "dtypes: int64(1), object(2)\n",
-      "memory usage: 99.1+ MB\n"
+      "memory usage: 74.3+ MB\n"
      ]
     }
    ],
@@ -1889,7 +1927,7 @@
     "    index = items[items['playtime_forever'] == 0].index,\n",
     "    inplace=True\n",
     "    )\n",
-    "\n",
+    "items.reset_index(drop=True, inplace=True)\n",
     "# Checking new info and size\n",
     "items.info()"
    ]
@@ -1904,66 +1942,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8c0e36fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved at \"data/items.json.gz\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "# What if i save this dataframe?\n",
-    "fts.gzip_json_file(\n",
-    "    './data/items.json.gz',\n",
-    "    df=items,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "b48550f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = df_games['genres'].map(lambda x: 'Action' in x, na_action='ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "e015c168",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         True\n",
-       "1        False\n",
-       "2        False\n",
-       "3         True\n",
-       "4          NaN\n",
-       "         ...  \n",
-       "32130    False\n",
-       "32131    False\n",
-       "32132    False\n",
-       "32133    False\n",
-       "32134      NaN\n",
-       "Name: genres, Length: 32133, dtype: object"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask"
+    "# fts.gzip_json_file(\n",
+    "#     './data/items.json.gz',\n",
+    "#     df=items,\n",
+    "# )\n",
+    "\n",
+    "items.to_csv('./data/items.csv.gz', compression='gzip', index=False)"
    ]
   }
  ],
