--- a/3.Queries_test.ipynb
+++ b/3.Queries_test.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succesfully load dataFrames\n"
+      "DataFrames succesfully loaded.\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +49,9 @@
       " 3   genres        32133 non-null  object\n",
       " 4   tags          32133 non-null  object\n",
       " 5   specs         32133 non-null  object\n",
-      " 6   release_year  32133 non-null  object\n",
-      " 7   price         32133 non-null  object\n",
-      "dtypes: int64(1), object(7)\n",
+      " 6   release_year  32133 non-null  int64 \n",
+      " 7   price         30756 non-null  object\n",
+      "dtypes: int64(2), object(6)\n",
       "memory usage: 2.0+ MB\n"
      ]
     }
@@ -72,13 +72,13 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 58430 entries, 0 to 58429\n",
       "Data columns (total 4 columns):\n",
-      " #   Column     Non-Null Count  Dtype \n",
-      "---  ------     --------------  ----- \n",
-      " 0   user_id    58430 non-null  object\n",
-      " 1   item_id    58430 non-null  int64 \n",
-      " 2   recommend  58430 non-null  bool  \n",
-      " 3   sentiment  58430 non-null  int64 \n",
-      "dtypes: bool(1), int64(2), object(1)\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   user_id    58430 non-null  object \n",
+      " 1   item_id    58430 non-null  int64  \n",
+      " 2   recommend  58430 non-null  bool   \n",
+      " 3   sentiment  58430 non-null  float64\n",
+      "dtypes: bool(1), float64(1), int64(1), object(1)\n",
       "memory usage: 1.4+ MB\n"
      ]
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "{'Release year with highest playtime for \"Action\" genre': 2012}"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,39 +231,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'User': 'Sp3ctre',\n",
-       " 'Playtime_year': {'Year 1995': 217,\n",
-       "  'Year 1999': 44,\n",
-       "  'Year 2000': 70644,\n",
-       "  'Year 2001': 13,\n",
-       "  'Year 2002': 238,\n",
-       "  'Year 2003': 7673,\n",
-       "  'Year 2004': 127411,\n",
-       "  'Year 2005': 21339,\n",
-       "  'Year 2006': 896,\n",
-       "  'Year 2007': 112784,\n",
-       "  'Year 2008': 224,\n",
-       "  'Year 2009': 108326,\n",
-       "  'Year 2010': 78083,\n",
-       "  'Year 2011': 154896,\n",
-       "  'Year 2012': 378296,\n",
-       "  'Year 2013': 120461,\n",
-       "  'Year 2014': 130691,\n",
-       "  'Year 2015': 307511,\n",
-       "  'Year 2016': 29576,\n",
-       "  'Year 2017': 43327,\n",
-       "  'Year Aug ': 394,\n",
-       "  'Year Jun ': 4606,\n",
-       "  'Year unknown': 1657}}"
+       " 'Playtime_year': {'Year 1995.0': 217,\n",
+       "  'Year 1999.0': 44,\n",
+       "  'Year 2000.0': 70644,\n",
+       "  'Year 2001.0': 13,\n",
+       "  'Year 2002.0': 238,\n",
+       "  'Year 2003.0': 7673,\n",
+       "  'Year 2004.0': 127411,\n",
+       "  'Year 2005.0': 21339,\n",
+       "  'Year 2006.0': 896,\n",
+       "  'Year 2007.0': 112784,\n",
+       "  'Year 2008.0': 224,\n",
+       "  'Year 2009.0': 108326,\n",
+       "  'Year 2010.0': 78083,\n",
+       "  'Year 2011.0': 154896,\n",
+       "  'Year 2012.0': 378296,\n",
+       "  'Year 2013.0': 120461,\n",
+       "  'Year 2014.0': 130691,\n",
+       "  'Year 2015.0': 312511,\n",
+       "  'Year 2016.0': 31233,\n",
+       "  'Year 2017.0': 43327}}"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +288,7 @@
     "    )\n",
     "\n",
     "    # Filtering by the year given\n",
-    "    masked = merged[merged['release_year'] == str(year)]\n",
+    "    masked = merged[merged['release_year'] == year]\n",
     "\n",
     "    # Getting titles of games\n",
     "    titles = (\n",
@@ -306,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +314,7 @@
        " 'Top 3': 'Fallout: New Vegas'}"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +346,7 @@
     "    )\n",
     "\n",
     "    # Filtering by the year given\n",
-    "    masked = merged[merged['release_year'] == str(year)]\n",
+    "    masked = merged[merged['release_year'] == year]\n",
     "\n",
     "    # Getting titles\n",
     "    titles = masked['developer'].value_counts()[:3].index\n",
@@ -362,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +370,7 @@
        " 'Top worst dev 3': 'Telltale Games'}"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +426,7 @@
        "{'Valve': ['Negative = 1095', 'Neutral = 2482', 'Positive = 6005']}"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
