--- a/2.Sentiment_analysis.ipynb
+++ b/2.Sentiment_analysis.ipynb
@@ -22,115 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 58430 entries, 0 to 58429\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column     Non-Null Count  Dtype \n",
-      "---  ------     --------------  ----- \n",
-      " 0   user_id    58430 non-null  object\n",
-      " 1   item_id    58430 non-null  int64 \n",
-      " 2   recommend  58430 non-null  bool  \n",
-      " 3   review     58430 non-null  object\n",
-      "dtypes: bool(1), int64(1), object(2)\n",
-      "memory usage: 1.4+ MB\n",
-      "None\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>recommend</th>\n",
-       "      <th>review</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>1250</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Simple yet with great replayability. In my opi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>22200</td>\n",
-       "      <td>True</td>\n",
-       "      <td>It's unique and worth a playthrough.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>43110</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Great atmosphere. The gunplay can be a bit chu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>js41637</td>\n",
-       "      <td>251610</td>\n",
-       "      <td>True</td>\n",
-       "      <td>I know what you think when you see this title ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>js41637</td>\n",
-       "      <td>227300</td>\n",
-       "      <td>True</td>\n",
-       "      <td>For a simple (it's actually not all that simpl...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             user_id  item_id  recommend  \\\n",
-       "0  76561197970982479     1250       True   \n",
-       "1  76561197970982479    22200       True   \n",
-       "2  76561197970982479    43110       True   \n",
-       "3            js41637   251610       True   \n",
-       "4            js41637   227300       True   \n",
-       "\n",
-       "                                              review  \n",
-       "0  Simple yet with great replayability. In my opi...  \n",
-       "1               It's unique and worth a playthrough.  \n",
-       "2  Great atmosphere. The gunplay can be a bit chu...  \n",
-       "3  I know what you think when you see this title ...  \n",
-       "4  For a simple (it's actually not all that simpl...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_revs = pd.read_json('./data/user_reviews_c.json.gz', compression='gzip', lines=True)\n",
     "print(df_revs.info())\n",
@@ -146,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +88,7 @@
        "Name: sentiment, Length: 58430, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +261,7 @@
        "21580             shez13   211820       True               1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,28 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved at \"data/reviews.json.gz\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Final version of dataset without review column\n",
     "columns = ['user_id', 'item_id', 'recommend', 'sentiment']\n",
     "\n",
     "# Saving final consumible version of the dataset\n",
-    "from functions import gzip_json_file\n",
-    "gzip_json_file(\n",
-    "    path= './data/reviews.json.gz',\n",
-    "    df= df_revs,\n",
-    "    subset= columns\n",
-    ")\n",
+    "# from functions import gzip_json_file\n",
+    "# gzip_json_file(\n",
+    "#     path= './data/reviews.json.gz',\n",
+    "#     df= df_revs,\n",
+    "#     subset= columns\n",
+    "# )\n",
+    "\n",
+    "# Saving csv format\n",
+    "df_revs[columns].to_csv('./data/reviews.csv.gz', compression='gzip', index=False)\n",
     "\n",
     "# Deleting previous reviews file\n",
     "import os\n",
