--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -44,7 +44,7 @@
     "import pandas as pd\n",
     "import importlib\n",
     "\n",
-    "import functions as fts \n",
+    "import functions.ETL as fts \n",
     "importlib.reload(fts)"
    ]
   },
