--- a/3.Queries_test.ipynb
+++ b/3.Queries_test.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from functions import load_dfs"
+    "from functions.ETL import load_dfs"
    ]
   },
   {
